tests/fixtures/errors/stringview_on_view.z
main: function is {
    sv: "hello"
    x: sv.stringview
    print "\{x}"
}
